--- a/weather-predict.ipynb
+++ b/weather-predict.ipynb
@@ -38,8 +38,8 @@
    },
    "outputs": [],
    "source": [
-    "initials = ''  # TODO\n",
-    "cluster_name = ''  # TODO\n",
+    "initials = 'mbs'  # TODO\n",
+    "cluster_name = 'cc-training-dev'  # TODO\n",
     "\n",
     "data_name = 'weather-nurnberg'"
    ]
@@ -381,15 +381,15 @@
    "source": [
     "# Used as input arguments to the training script.\n",
     "# Play with sequence length.\n",
-    "sequence_length = None  # TODO\n",
-    "batch_size = None  # TODO play with batch size\n",
-    "epochs = None # TODO play with number of epochs\n",
+    "sequence_length = 21  # TODO\n",
+    "batch_size = 128  # TODO play with batch size\n",
+    "epochs = 50 # TODO play with number of epochs\n",
     "\n",
     "# play with early stopping. This will stop if now change in val loss is registered for a specified number of epochs \n",
-    "patience = None # TODO\n",
+    "patience = 5 # TODO\n",
     "\n",
     "# play with number of recurrent units. Keep in mind that it is generally good to have lesser units than input sequence length\n",
-    "recurrent_units = None # TODO\n",
+    "recurrent_units = 8 # TODO\n",
     "\n",
     "# go ahead and implement other layers\n",
     "recurrent_model_type = 'LSTM' # TODO\n",
