removed erroneous comment

--- a/weather-predict.ipynb
+++ b/weather-predict.ipynb
@@ -388,7 +388,7 @@
     "# play with early stopping. This will stop if now change in val loss is registered for a specified number of epochs \n",
     "patience = None # TODO\n",
     "\n",
-    "# play with number of recurrent units. Keep in mind that it is generally good to have lesser units than input sequence length\n",
+    "# play with number of recurrent units\n",
     "recurrent_units = None # TODO\n",
     "\n",
     "# go ahead and implement other layers\n",
