fixed error in unequal sequence length

--- a/weather-predict.ipynb
+++ b/weather-predict.ipynb
@@ -1216,7 +1216,7 @@
    },
    "outputs": [],
    "source": [
-    "true = to_predict.iloc[sequence_length:, -1].to_numpy()\n",
+    "true = to_predict.iloc[sequence_length:-1, -1].to_numpy()\n",
     "pred = predictions.iloc[:, -1].to_numpy()\n",
     "residuals = true - pred\n",
     "residuals.shape\n",
